@@ -24,14 +24,14 @@ the response.}
   }
 
 \details{See the source code for exactly what is simulated in each case. 
-\itemize{
-\item{1}{Gu and Wahba 4 univariate term example.}
-\item{2}{A smooth function of 2 variables.}
-\item{3}{Example with continuous by variable.}
-\item{4}{Example with factor by variable.}
-\item{5}{An additive example plus a factor variable.}
-\item{6}{Additive + random effect.}
-\item{7}{As 1 but with correlated covariates.}
+\enumerate{
+\item{Gu and Wahba 4 univariate term example.}
+\item{A smooth function of 2 variables.}
+\item{Example with continuous by variable.}
+\item{Example with factor by variable.}
+\item{An additive example plus a factor variable.}
+\item{Additive + random effect.}
+\item{As 1 but with correlated covariates.}
 }
 }
 
