@@ -29,7 +29,7 @@ formula. Objects generated by \code{s} terms have class \code{xx.smooth.spec} wh
 \code{bs} argument of \code{s} (this convention allows the user to add their own smoothers). 
 If \code{object} is not class \code{tensor.smooth.spec} it will have the following elements:
 
-\itemize{
+\describe{
 \item{term}{The names of the covariates for this smooth, in an array.}
 \item{bs.dim}{ Argument \code{k} of the \code{s} term generating the object. This is the dimension of the basis 
 used to represent the term (or, arguably, 1 greater than the basis dimension for \code{cc} terms). 
@@ -54,7 +54,7 @@ over-rides \code{sp} argument to \code{\link{gam}}.}
 If \code{object} is of class \code{tensor.smooth.spec} then it was generated by a \code{te} term in the GAM formula, 
 and specifies a smooth of several variables with a basis generated as a tensor product of lower dimensional bases. 
 In this case the object will be different and will have the following elements:
-\itemize{
+\describe{
 \item{margin}{is a list of smooth specification objects of the type listed above, defining the bases which have 
 their tensor product formed in order to construct this term.}
 \item{term}{is the array of names of the covariates that are arguments of the smooth.}
